# PUGS

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build-requirements.txt  lint.sh  pip-requirements.txt  pyproject.toml  setup_env.sh
.github/workflows/: build_container.yml  build_tangos_db.yml  build_volume_ic.yml  deploy-pages.yml  docs.yml  linter.yml
build_tangos_db/: .gitignore  README.md  build_tangos.sh  properties.py  requirements.txt
build_tangos_db/tests/: conftest.py  test_properties.py
build_volume_ic/: .checksums.txt  README.md  build.sh
builder/container/: .gitignore  build_container.sh  pugs.db.placeholder  pugs.def
builder/tangos_db/: .gitignore  build_tangos.sh  config_vars
builder/tangos_db/tests/: test_counts.py  test_properties.py
builder/volume_ic/: build.sh
docs/: NUGS2048.md  conf.py  cosmology.md  development.md  getting-started.md  index.md  myst.yml
docs/api/: genetic.md  index.md  properties.md
docs/figures/: plot_halo_properties.py  plot_hmf.py
docs/pipeline/: container.md  index.md  tangos-db.md  volume-ic.md
inputs/: zoom_template.txt
pugs/: __init__.py  genetic.py  properties.py
pugs_tangos_db/: .envrc  .gitignore  README.md  build.sh  build_tangos.sh  config_vars  properties.py
pugs_volume_ic/: .checksums.txt  README.md  build.sh  fix_header.py  requirements.txt
pugs_volume_ic/inputs/: genetIC_volume.txt  planck_2018_CAMB.ini
