[build-system]
requires = ["setuptools"]

[project]
name = "PUGS"
authors = [
    {name="BW Keller", email="bkeller1@memphis.edu"},
]
description = "PUGS: The Portable Universal Galaxy Sampler"
readme = "README.md"
dependencies = [
    "pip==25.2",
    "tangos==1.10.0",
    "pynbody==2.3.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "camb==1.5.5",
    "black==25.9.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "pytest==9.0.2",
    "requests==2.32.5",
    "pre-commit",
    ]

[project.entry-points."tangos.property_modules"]
properties = "pugs.properties"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]

[tool.isort]
profile = "black"
known_first_party = ["pugs"]

[tool.setuptools]
packages = ["pugs",]
